# CMBS

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
cmbs/: __init__.py  belief_api.py  belief_server.py  belief_state.py  core.py  op_models.py  oplog_server.py  reducers.py
cmbs/adapters/: __init__.py  types.py
cmbs/adapters/itbench/: __init__.py  adapter.py  kit.py  oracle.py
cmbs/adapters/legacy/: replay.py
cmbs/adapters/twenty_questions/: __init__.py  adapter.py  kit.py  oracle.py
cmbs/spi/: __init__.py  adapter.py  elimination_store.py  hypothesis_provider.py
cmbs/stores/: memory.py
design/: adr-001-unify-kernels.md  adr-002-naming.md  kernel-comparison.md
docs/: architecture.md  index.md  use-cases.md
docs-site/: REPOSITORY_STRUCTURE.md
docs-vault/: BELIEF_SERVER_SPEC.md
docs/reference/: api.md  invariant-test-matrix.md  repository.md
examples/: run_20q.py  run_itbench.py
tests/: conftest.py  test_belief_server_spi_smoke.py  test_legacy_adapter.py  test_oplog_server_v2.py  test_spi_belief_state.py  test_v0_core.py
